# GamerzRpg

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: events.py  game.py
db/: __init__.py  exp.py  items.py  region.py  stats.py  wallet.py
stats/entities/: gyarados.json  heatran.json  mouse.json
